# pipecat-upliftai

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: voice_agent.py
src/pipecat_upliftai/: __init__.py  tts.py
tests/: test_init.py
